--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.1",
+    "react-social-icons": "^6.24.0",
     "recoil": "^0.7.7",
     "tailwind-merge": "^2.6.0"
   },
